[tool:pytest]
testpaths = test

[flake8]
max-line-length = 80

[isort]
known_first_party = hdyndns
known_third_party = pytest
line_length = 80
multi_line_output = 3
skip = .venv, .tox
include_trailing_comma = True

[metadata]
name = hdyndns
author = decentral1se
author_email = lukewm@riseup.net
maintainer = decentral1se
maintainer_email = lukewm@riseup.net
url = https://hack.decentral1.se/decentral1se/hdyndns
project_urls =
  Source Code = https://hack.decentral1.se/decentral1se/hdyndns
  Documentation = https://hdyndns.readthedocs.io/
  Maintainer Support = https://decentral1.se
description = A GNU/Linux Python 3.5+ DynDNS client for your homebrew server
long_description = file: README.rst
license = GPLv3
license_file = LICENSE
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.7

[options]
use_scm_version = True
python_requires = !=2.7.*, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires =
  setuptools_scm
  setuptools_scm_git_archive
package_dir =
  = .
packages = find:
zip_safe = False

[options.packages.find]
where = .

[build_sphinx]
all_files = 1
build-dir = documentation/build
source-dir = documentation/source
warning-is-error = True

[options.extras_require]
docs =
  sphinx <= 2.1.2, < 2.2
changelog =
  towncrier <= 19.2.0, < 20.0

[options.entry_points]
console_scripts =
    hdyndns = hdyndns.cli:cli_entrypoint
